--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>StatNLP Sponsorship</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="StatNLP Sponsorship Web Design">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Sponsorship</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico">
+
   </head>
   <body>
     <div id="app"></div>
+
+
     <!-- built files will be auto injected -->
   </body>
 </html>
