--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Sponsorship</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css">
     <link href="./static/css/dashboard.css" rel="stylesheet" />
     <link href="./static/plugins/charts-c3/plugin.css" rel="stylesheet" />
     <link href="./static/plugins/maps-google/plugin.css" rel="stylesheet" />
