--- a/404.html
+++ b/404.html
@@ -18,15 +18,15 @@
     <title>404</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,500,500i,600,600i,700,700i&amp;subset=latin-ext">
-    <script src="./static/js/require.min.js"></script>
+    <script src="/static/js/require.min.js"></script>
     <script>
       requirejs.config({
           baseUrl: '.'
       });
     </script>
     <!-- Dashboard Core -->
-    <link href="./static/css/dashboard.css" rel="stylesheet" />
-    <script src="./static/js/dashboard.js"></script>
+    <link href="/static/css/dashboard.css" rel="stylesheet" />
+    <script src="/static/js/dashboard.js"></script>
   </head>
   <body class="">
     <div class="page">
