import direct vendor js

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
   <body>
     <div id="app"></div>
 
-    <script src="./static/js/require.min.js"></script>
-    <script>
-      requirejs.config({
-          baseUrl: '.'
-      });
-    </script>
-    <!-- Dashboard Core -->
+    <script src="./static/js/vendors/jquery-3.2.1.min.js"></script>
+    <script src="./static/js/vendors/bootstrap.bundle.min.js"></script>
+    <script src="./static/js/vendors/jquery.sparkline.min.js"></script>
+    <script src="./static/js/vendors/selectize.min.js"></script>
+    <script src="./static/js/vendors/jquery.tablesorter.min.js"></script>
+    <script src="./static/js/vendors/circle-progress.min.js"></script>
+    <script src="./static/js/vendors/jquery.dataTables.min.js"></script>
     <script src="./static/js/dashboard.js"></script>
     <!-- c3.js Charts Plugin -->
 
